--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "login-page",
+  "homepage": "https://tbsoysal.github.io/login-page/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -21,6 +22,7 @@
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
